--- a/dw.css
+++ b/dw.css
@@ -1,5 +1,35 @@
-djwpicture [
+.dwPicture {
 border-radius: 12px;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-]
+}
 
+.dwBody {
+    background-color: #121212;
+}
+
+AM {padding:75px; background-color: darkcyan;}
+AMH {font-family: Ubuntu; font-size: 30px; color: white;}
+
+.dwheader {
+    padding-top: 16px;
+    padding-bottom:16px;
+    padding-right: 5px;
+    padding-left: 5px;
+    background-image: linear-gradient(to bottom right, blue, purple);
+}
+
+.dwNav {
+    background-color: #8354b8;
+    padding: 3px;
+    position: sticky;
+}
+
+.dwRight {
+    margin-left: 75%;
+}
+
+.dwText {
+    font-family: Lora;
+    font-size: 25px;
+    color: white;
+}
