--- a/dw.css
+++ b/dw.css
@@ -8,17 +8,16 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .dwHeader {
-    padding-top: 16px;
-    padding-bottom:16px;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding: 32px;
     background-image: linear-gradient(to bottom right, blue, purple);
 }
 
 .dwNav {
+    margin-top: 1%;
     background-color: #8354b8;
     padding: 3px;
     position: sticky;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .dwBar {
@@ -50,4 +49,41 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
 .dwTCenter {
     text-align: center;
+}
+
+.dwButton {
+    padding: 10px 10px;
+    transition-duration: 0.4s;
+    background-color: purple;
+    margin-bottom: 5%;
+}
+
+.dwButton:hover {
+    background-color: white;
+    color: purple;
+}
+
+.dwGap {
+    padding: 10px;
+    background-color: #121212;
+}
+
+.dwAM {
+    padding: 50px;
+    background-color: #262626;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.dwBoxify {
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1%;
+}
+
+.dwBText {
+    font-family: Playfair Display;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
 }
